--- a/main_app/templates/main_app/details.html
+++ b/main_app/templates/main_app/details.html
@@ -2,6 +2,7 @@
 {% block replace %}
 <CENTER>
 <div class="jumbotron">
+    <h1> {{text}}</h1>
   <img src="{{ user_pr.display_picture.url }}" class="image_responsive" height="100px" width="100px">
 </div>
 </CENTER>
