--- a/main_app/templates/main_app/create.html
+++ b/main_app/templates/main_app/create.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <center>
-            <div class="jumbotron">
+            <div class="dev_io_main">
                         {% block replace %}
                 <form method="POST" enctype="multipart/form-data">
                     <!-- Very Important csrf Token -->
