cahced loader for templates
- added cahed loader for templates

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends 'main_app/create.html' %}
+{% extends 'create.html' %}
 {% block replace %}
 <CENTER>
     <h1 style = 'border: 2px red solid;'> hello, you have uploaded the wrong file type.</h1>
