--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends 'create.html' %}
 {% block replace %}
 <CENTER>
-    <h1 style = 'border: 2px red solid;'> hello, you have uploaded the wrong file type.</h1>
+    <h1 style = 'border: 2px red solid;'> Fil Type is not supported </h1>
 </CENTER>
 {% endblock %}
