--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends 'create.html' %}
+{% extends 'upload.html' %}
 {% block replace %}
 <CENTER>
     <h1 style = 'border: 2px red solid;'> Fil Type is not supported </h1>
